simadoc törlése, tex fájlokba áttéve az infó
- Attila emailcímének javítása
- képernyőképek beszúrása (emailhez nem tettem, szerintem fölösleges)
- Naplóba áttéve a docban lévő bejegyzések
- Feladatleírás szerkesztése
- Szótár szerkesztése, rendezése

--- a/doc/tex/szglab4.tex
+++ b/doc/tex/szglab4.tex
@@ -8,7 +8,7 @@
 \konzulens{dr. László Zoltán}
 \taga{Kriván Bálint}{CBVOEN}{balint@krivan.hu}
 \tagb{Jákli Gábor}{ONZ5G1}{j\_gab666@hotmail.com}
-\tagc{Dévényi Attila}{L1YRH0}{devenyiat@hotmail.com}
+\tagc{Dévényi Attila}{L1YRH0}{devenyiat@gmail.com}
 \tagd{Apagyi Gábor}{X8SG3T}{apagyi.gabooo@gmail.com}
 \tage{Péter Tamás Pál}{N5ZLEG}{falconsaglevlist@gmail.com}
 \datum{\today}
