--- a/doc/szglab4.tex
+++ b/doc/szglab4.tex
@@ -17,8 +17,8 @@
 %
 % Nem aktuális sorokat kommentezni
 %
-\fedlap{2. Követelmény, projekt, funkcionalitás}
-%\fedlap{3. Analízis modell kidolgozása 1}
+%\fedlap{2. Követelmény, projekt, funkcionalitás}
+\fedlap{3. Analízis modell kidolgozása 1}
 %\fedlap{4. Analízis modell kidolgozása 2}
 % ...
 %
@@ -29,14 +29,14 @@
 %
 % Nem aktuális fejezetek kikommentezve
 %
-\setcounter{chapter}{1}
-\input{chapters/chapter02/sablon02}
-\input{chapters/chapter02/naplo02}
-%
-%\setcounter{chapter}{2}
-%\input{chapters/chapter03/sablon03}
-%\input{chapters/chapter03/naplo03}
-%%
+%\setcounter{chapter}{1}
+%\input{chapters/chapter02/sablon02}
+%\input{chapters/chapter02/naplo02}
+
+\setcounter{chapter}{2}
+\input{chapters/chapter03/sablon03}
+\input{chapters/chapter03/naplo03}
+
 %\setcounter{chapter}{3}
 %\input{chapters/chapter04/sablon04}
 %\input{chapters/chapter04/naplo04}
