--- a/doc/szglab4.tex
+++ b/doc/szglab4.tex
@@ -19,8 +19,8 @@
 %
 %\fedlap{2. Követelmény, projekt, funkcionalitás}
 %\fedlap{3. Analízis modell kidolgozása 1}
-\fedlap{4. Analízis modell kidolgozása 2}
-% ...
+%\fedlap{4. Analízis modell kidolgozása 2}
+\fedlap{5. Szkeleton tervezése}
 %
 % Tartalomjegyzék és ábrák jegyzéke
 %
@@ -37,13 +37,13 @@
 %\input{chapters/chapter03/sablon03}
 %\input{chapters/chapter03/naplo03}
 
-\setcounter{chapter}{3}
-\input{chapters/chapter04/sablon04}
-\input{chapters/chapter04/naplo04}
+%\setcounter{chapter}{3}
+%\input{chapters/chapter04/sablon04}
+%\input{chapters/chapter04/naplo04}
 %%
-%\setcounter{chapter}{4}
-%\input{chapters/chapter05/sablon05}
-%\input{chapters/chapter05/naplo05}
+\setcounter{chapter}{4}
+\input{chapters/chapter05/sablon05}
+\input{chapters/chapter05/naplo05}
 %%
 %\setcounter{chapter}{5}
 %\input{chapters/chapter06/sablon06}
