--- a/doc/includes/header.tex
+++ b/doc/includes/header.tex
@@ -47,6 +47,8 @@
 	bookmarksnumbered=true
 }
 
+\textheight = 720pt
+
 %
 % ===========================================================================
 % EOF
