--- a/doc/szglab4.tex
+++ b/doc/szglab4.tex
@@ -20,7 +20,8 @@
 %\fedlap{2. Követelmény, projekt, funkcionalitás}
 %\fedlap{3. Analízis modell kidolgozása 1}
 %\fedlap{4. Analízis modell kidolgozása 2}
-\fedlap{5. Szkeleton tervezése}
+%\fedlap{5. Szkeleton tervezése}
+\fedlap{6. Szkeleton beadás}
 %
 % Tartalomjegyzék és ábrák jegyzéke
 %
@@ -40,15 +41,15 @@
 %\setcounter{chapter}{3}
 %\input{chapters/chapter04/sablon04}
 %\input{chapters/chapter04/naplo04}
-%%
-\setcounter{chapter}{4}
-\input{chapters/chapter05/sablon05}
-\input{chapters/chapter05/naplo05}
-%%
-%\setcounter{chapter}{5}
-%\input{chapters/chapter06/sablon06}
-%\input{chapters/chapter06/naplo06}
-%%
+
+%\setcounter{chapter}{4}
+%\input{chapters/chapter05/sablon05}
+%\input{chapters/chapter05/naplo05}
+
+\setcounter{chapter}{5}
+\input{chapters/chapter06/sablon06}
+\input{chapters/chapter06/naplo06}
+
 %\setcounter{chapter}{6}
 %\input{chapters/chapter07/sablon07}
 %\input{chapters/chapter07/naplo07}
