Átállás az új fejezetre + napló

--- a/doc/szglab4.tex
+++ b/doc/szglab4.tex
@@ -6,7 +6,7 @@
 \usepackage{multirow}
 %
 \csapat{\team}{54}
-\konzulens{dr. László Zoltán}
+\konzulens{Dr. László Zoltán}
 \taga{Kriván Bálint}{CBVOEN}{balint@krivan.hu}
 \tagb{Jákli Gábor}{ONZ5G1}{j\_gab666@hotmail.com}
 \tagc{Dévényi Attila}{L1YRH0}{devenyiat@gmail.com}
@@ -24,7 +24,8 @@
 %\fedlap{5. Szkeleton tervezése}
 %\fedlap{6. Szkeleton beadás}
 %\fedlap{7. Prototípus koncepció}
-\fedlap{8. Részletes tervek}
+%\fedlap{8. Részletes tervek}
+\fedlap{10. Prototípus beadása}
 %
 % Tartalomjegyzék és ábrák jegyzéke
 %
@@ -57,13 +58,13 @@
 %\input{chapters/chapter07/sablon07}
 %\input{chapters/chapter07/naplo07}
 %%
-\setcounter{chapter}{7}
-\input{chapters/chapter08/sablon08}
-\input{chapters/chapter08/naplo08}
+%\setcounter{chapter}{7}
+%\input{chapters/chapter08/sablon08}
+%\input{chapters/chapter08/naplo08}
 %%
-%\setcounter{chapter}{9}
-%\input{chapters/chapter10/sablon10}
-%\input{chapters/chapter10/naplo10}
+\setcounter{chapter}{9}
+\input{chapters/chapter10/sablon10}
+\input{chapters/chapter10/naplo10}
 %%
 %\setcounter{chapter}{10}
 %\input{chapters/chapter11/sablon11}
