Doksi + diagram update

--- a/doc/includes/szglab4.sty
+++ b/doc/includes/szglab4.sty
@@ -1,7 +1,7 @@
 % Szglab4
 % ===========================================================================
 %
-\usepackage{graphicx}
+\usepackage[pdftex]{graphicx}
 
 \newcommand{\csapat}[2]{\newcommand{\tmpcsapat}{#1}\newcommand{\sorszam}{#2}}
 \newcommand{\anyag}[1]{\newcommand{\tmpanyag}{#1}}
