--- a/doc/szglab4.tex
+++ b/doc/szglab4.tex
@@ -25,7 +25,8 @@
 %\fedlap{6. Szkeleton beadás}
 %\fedlap{7. Prototípus koncepció}
 %\fedlap{8. Részletes tervek}
-\fedlap{10. Prototípus beadása}
+%\fedlap{10. Prototípus beadása}
+\fedlap{11. Grafikus felület specifikációja}
 %
 % Tartalomjegyzék és ábrák jegyzéke
 %
@@ -57,19 +58,19 @@
 %\setcounter{chapter}{6}
 %\input{chapters/chapter07/sablon07}
 %\input{chapters/chapter07/naplo07}
-%%
+
 %\setcounter{chapter}{7}
 %\input{chapters/chapter08/sablon08}
 %\input{chapters/chapter08/naplo08}
-%%
-\setcounter{chapter}{9}
-\input{chapters/chapter10/sablon10}
-\input{chapters/chapter10/naplo10}
-%%
-%\setcounter{chapter}{10}
-%\input{chapters/chapter11/sablon11}
-%\input{chapters/chapter11/naplo11}
-%%
+
+%\setcounter{chapter}{9}
+%\input{chapters/chapter10/sablon10}
+%\input{chapters/chapter10/naplo10}
+
+\setcounter{chapter}{10}
+\input{chapters/chapter11/sablon11}
+\input{chapters/chapter11/naplo11}
+
 %\setcounter{chapter}{12}
 %\input{chapters/chapter13/sablon13}
 %\input{chapters/chapter13/naplo13}
