--- a/doc/szglab4.tex
+++ b/doc/szglab4.tex
@@ -26,7 +26,8 @@
 %\fedlap{7. Prototípus koncepció}
 %\fedlap{8. Részletes tervek}
 %\fedlap{10. Prototípus beadása}
-\fedlap{11. Grafikus felület specifikációja}
+%\fedlap{11. Grafikus felület specifikációja}
+\fedlap{12. Grafikus változat beadása}
 %
 % Tartalomjegyzék és ábrák jegyzéke
 %
