--- a/doc/szglab4.tex
+++ b/doc/szglab4.tex
@@ -18,6 +18,7 @@
 %
 % Nem aktuális sorokat kommentezni
 %
+\fedlap{Digitális áramkör szimulátor}
 %\fedlap{2. Követelmény, projekt, funkcionalitás}
 %\fedlap{3. Analízis modell kidolgozása 1}
 %\fedlap{4. Analízis modell kidolgozása 2}
@@ -27,7 +28,7 @@
 %\fedlap{8. Részletes tervek}
 %\fedlap{10. Prototípus beadása}
 %\fedlap{11. Grafikus felület specifikációja}
-\fedlap{12. Grafikus változat beadása}
+%\fedlap{12. Grafikus változat beadása}
 %
 % Tartalomjegyzék és ábrák jegyzéke
 %
@@ -36,48 +37,48 @@
 %
 % Nem aktuális fejezetek kikommentezve
 
-%\setcounter{chapter}{1}
-%\input{chapters/chapter02/sablon02}
-%\input{chapters/chapter02/naplo02}
+\setcounter{chapter}{1}
+\input{chapters/chapter02/sablon02}
+\input{chapters/chapter02/naplo02}
 
 %\setcounter{chapter}{2}
 %\input{chapters/chapter03/sablon03}
 %\input{chapters/chapter03/naplo03}
 
-%\setcounter{chapter}{3}
-%\input{chapters/chapter04/sablon04}
-%\input{chapters/chapter04/naplo04}
+\setcounter{chapter}{3}
+\input{chapters/chapter04/sablon04}
+\input{chapters/chapter04/naplo04}
 
-%\setcounter{chapter}{4}
-%\input{chapters/chapter05/sablon05}
-%\input{chapters/chapter05/naplo05}
+\setcounter{chapter}{4}
+\input{chapters/chapter05/sablon05}
+\input{chapters/chapter05/naplo05}
 
-%\setcounter{chapter}{5} 
-%\input{chapters/chapter06/sablon06}
-%\input{chapters/chapter06/naplo06}
+\setcounter{chapter}{5} 
+\input{chapters/chapter06/sablon06}
+\input{chapters/chapter06/naplo06}
 
-%\setcounter{chapter}{6}
-%\input{chapters/chapter07/sablon07}
-%\input{chapters/chapter07/naplo07}
+\setcounter{chapter}{6}
+\input{chapters/chapter07/sablon07}
+\input{chapters/chapter07/naplo07}
 
-%\setcounter{chapter}{7}
-%\input{chapters/chapter08/sablon08}
-%\input{chapters/chapter08/naplo08}
+\setcounter{chapter}{7}
+\input{chapters/chapter08/sablon08}
+\input{chapters/chapter08/naplo08}
 
-%\setcounter{chapter}{9}
-%\input{chapters/chapter10/sablon10}
-%\input{chapters/chapter10/naplo10}
+\setcounter{chapter}{9}
+\input{chapters/chapter10/sablon10}
+\input{chapters/chapter10/naplo10}
 
-%\setcounter{chapter}{10}
-%\input{chapters/chapter11/sablon11}
-%\input{chapters/chapter11/naplo11}
+\setcounter{chapter}{10}
+\input{chapters/chapter11/sablon11}
+\input{chapters/chapter11/naplo11}
 
 \setcounter{chapter}{12}
 \input{chapters/chapter13/sablon13}
 \input{chapters/chapter13/naplo13}
-%%
-%\setcounter{chapter}{13}
-%\input{chapters/chapter14/sablon14}
+
+\setcounter{chapter}{13}
+\input{chapters/chapter14/sablon14}
 %
 %\clearpage
 %
